add commnd minor edited

--- a/lib/math.tex
+++ b/lib/math.tex
@@ -1,9 +1,13 @@
+%частная производная
 \newcommand{\pdd}[2]{
 	\frac{\partial#1}{\partial#2}
 }
+
+%производная по одной переменной
 \newcommand{\dd}[2]{
 	\frac{d#1}{d#2}
 }
+%дифференциал
 \newcommand{\diff}[1]{
 	d#1
 }
