--- a/theory/index.tex
+++ b/theory/index.tex
@@ -59,11 +59,16 @@
 \paragraph{OZ} - вертикаль проходящая через точку вылета;
 \paragraph{OX, OY} - произвольно выбранные оси в плоскости горизонта орудия, зафиксированные относительно местных предметов, образующие с осью OZ правую тройку.
 
-\subsection{Принятая для описания траектории}
+\subsection{Связанная с направлением стрельбы}
 Во внешней баллистике используется система координат, начало которой совпадает с точкой вылета, ось OX - линия пересечения плоскости бросания с горизонтом орудия, ось OY - направлена вверх, а ось OZ - направлена вправо от направления стрельбы (оси образуют правую тройку).
 Чтобы упростить переход между системами координат, для описания траектории будет использоваться иное положение осей:
 \paragraph{OZ} - вертикаль проходящая через точку вылета;
 \paragraph{OX} - линия пересечения плоскости бросания с горизонтом орудия (как и принятая во внешней баллистике);
 \paragraph{OY} - направлена влево от точки вылета так, чтобы оси образовали правую тройку.
 
-Таким образом переход между назваными системами координат может быть выполнен поворотом вокруг оси OZ, и в некоторых случаях смещением начала отсчёта. Уравнения для вычисления координат и скоростей - одинаковы во всех системах координат, и отличаются только значениями проекций начальной скорости и в некоторых случаях - начальными координатами.
+\subsection{Связанная с направлением стрельбы относительно ветра}
+\paragraph{OZ} - вертикаль проходящая через точку вылета;
+\paragraph{OY} - направлена влево от точки вылета так, чтобы проекция воздушной скорости снаряда на эту ось была нулевой
+\paragraph{OX} - проходит через точку вылета близко к направлению стрельбы, так, чтобы оси образовывали правую тройку
+
+Таким образом переход между назваными системами координат может быть выполнен поворотом вокруг оси OZ, и в некоторых случаях смещением начала отсчёта.
