refactoring of import and addinc keys for design metric units

--- a/base/task/view.tex
+++ b/base/task/view.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{article}
-\usepackage{import}
-\subimport{../../}{configs/article}
+\usepackage{steal}
+\steal{../../}{configs/article}
 
 \begin{document}
 
