--- a/configs/article.tex
+++ b/configs/article.tex
@@ -1,3 +1,6 @@
-\input{lib/standart}
-\input{configs/packages}
-\input{configs/article_fields}
+%\input{lib/standart}
+%\input{configs/packages}
+%\input{configs/article_fields}
+\stealfile{configs/packages}
+\stealfile{configs/article_fields}
+\stealfile{lib/standart}
