--- a/configs/packages.tex
+++ b/configs/packages.tex
@@ -1,4 +1,4 @@
-\input{configs/utf8_russian.tex}
+\stealfile{configs/utf8_russian.tex}
 
 \usepackage{amsmath} 
 \usepackage{comment} 
@@ -6,5 +6,5 @@
 \usepackage{amsthm}
 \usepackage{steal}
 
-\input{configs/listings.tex}
+\stealfile{configs/listings.tex}
 
