--- a/lib/standart.tex
+++ b/lib/standart.tex
@@ -1,5 +1,7 @@
-\input{lib/construction}
+\stealfile{lib/construction}
 
-\input{lib/math}
+\stealfile{lib/math}
 
-\input{lib/specific}
+\stealfile{lib/metric}
+
+\stealfile{lib/specific}
