--- a/base/task/index.tex
+++ b/base/task/index.tex
@@ -1,13 +1,13 @@
 \section{Описание задачи}
 \subsection{Обозначение величин}
 \paragraph{}
-$ \vec{V} \left [ = \frac{\mbox{м}}{\mbox{с}} \right ] $ - скорость снаряда;
+$ \vec{V} \metric{\frac{\meter}{\second}} $ - скорость снаряда;
 
-$ \vec{V_a} \left [ = \frac{\mbox{м}}{\mbox{с}} \right ] $ - скорость воздуха;
+$ \vec{V}_a \metric{\frac{\meter}{\second}} $ - скорость воздуха;
 
-$g$ - ускорение свободного падения;
+$g \metric{\frac{\meter}{\second^2}}$ - ускорение свободного падения;
 
-$\rho$ - плотность воздуха;
+$\rho \metric{\kg \over \meter^3}$ - плотность воздуха;
 
 $c_x$ - коэффициент лобового сопротивления
 
